--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
       - name: "Checkout@V3"
         uses: actions/checkout@v3
-      - name: "Setup JDK 11"
+      - name: "Setup JDK 19"
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '19'
           distribution: 'temurin'
           cache: gradle
 
@@ -52,9 +52,10 @@ jobs:
           artifactErrorsFailBuild: true
           body:  |
             ### 功能更新
-            - 处理高德地图内存泄露问题
-            - 百度地图同高德地图在MapApplier中移除对MapView的引用
-            - 升级Compose版本和JDK版本
+            - 升级Android三方库，包含地图SDK
+            - 升级JDK版本
+            - 使用Compose BOM维护Compose版本
+            - 处理版本升级的异常显示和闪退问题
           token: ${{ secrets.github_token }}
           commit: master
           # tag名称
