--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,10 +20,13 @@ jobs:
     steps:
       - name: "Checkout@V3"
         uses: actions/checkout@v3
+        with:
+          node-version: '20'
       - name: "Setup JDK 19"
         uses: actions/setup-java@v3
         with:
           java-version: '19'
+          node-version: '20'
           distribution: 'temurin'
           cache: gradle
 
