--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,16 +20,16 @@ jobs:
     steps:
       - name: "Checkout@V3"
         uses: actions/checkout@v3
-        with:
-          node-version: '20'
       - name: "Setup JDK 19"
         uses: actions/setup-java@v3
         with:
           java-version: '19'
-          node-version: '20'
           distribution: 'temurin'
-          cache: gradle
+          # 暂时去除 cache: gradle
 
+      - name: Verify Java version
+        run: java -version
+        
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
