--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,7 +40,11 @@ lib_maven_version_name = "1.0.6"
 lib_maven_version_code = "106"
 
 [libraries]
+androidx-compose-ui-ui = { module = "androidx.compose.ui:ui" }
+androidx-runtime = { module = "androidx.compose.runtime:runtime" }
+androidx-ui = { module = "androidx.compose.ui:ui" }
 compose-bom = {module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+foundation = { module = "androidx.compose.foundation:foundation" }
 material = {module = "androidx.compose.material:material", version.ref = "material"}
 core-ktx = {module = "androidx.core:core-ktx", version.ref = "coreKtx"}
 leakcanary-android = {module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanary_android"}
@@ -61,6 +65,8 @@ baidu-util-map = {module = "com.baidu.lbsyun:BaiduMapSDK_Util", version.ref = "b
 tencent-location-map = {module = "com.tencent.map.geolocation:TencentLocationSdk-openplatform", version.ref = "tencent_location_map"}
 tencent-map-vector-sdk = {module = "com.tencent.map:tencent-map-vector-sdk", version.ref = "tencent_vector_map"}
 tencent-map-sdk-utilities = {module = "com.tencent.map:sdk-utilities", version.ref = "tencent_utils_map"}
+compose-ui = { module = "androidx.compose.ui:ui" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 
 
 [plugins]
